--- a/src/app/app.html
+++ b/src/app/app.html
@@ -39,6 +39,7 @@
 
   <!-- Chat flotante global -->
   <app-floating-chat></app-floating-chat>
+  <app-modal></app-modal>
 </div>
 
 <footer class="now-playing-bar">
