--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,6 +24,9 @@
         <a routerLink="/ranking" routerLinkActive="active" (click)="toggleMenu()">
           <i class="fas fa-trophy me-1"></i>Ranking
         </a>
+        <a routerLink="/about" routerLinkActive="active" (click)="toggleMenu()">
+          <i class="fas fa-info-circle me-1"></i>Nosotros
+        </a>
         <a routerLink="/admin-login" routerLinkActive="active" (click)="toggleMenu()">
           <i class="fas fa-lock me-1"></i>
         </a>
