timers and information in about

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -8,8 +8,19 @@
     <h1 class="display-4 fw-bold gradient-text mb-3">Música Democrática</h1>
     <p class="lead text-muted mb-5">
       Transformando la experiencia auditiva en espacios compartidos.
-      <br>Tu opinión cuenta, tu música suena.
     </p>
+  </div>
+
+  <!-- Info & Schedule -->
+  <div class="row container mx-auto mb-5 g-4">
+    <div class="col-lg-6">
+      <app-announcement></app-announcement>
+    </div>
+    <div class="col-lg-6">
+      <div class="schedule-wrapper">
+        <app-schedule></app-schedule>
+      </div>
+    </div>
   </div>
 
   <!-- Features Grid -->
@@ -58,7 +69,7 @@
         <div class="row align-items-center">
           <div class="col-md-4 text-center mb-4 mb-md-0">
             <div class="avatar-container">
-              <i class="fas fa-user-astronaut fa-6x text-white"></i>
+              <img src="https://media.licdn.com/dms/image/v2/D4E03AQGIyCKP4VwZKQ/profile-displayphoto-shrink_800_800/B4EZaw7C3sGQAg-/0/1746724992143?e=1770249600&v=beta&t=GPHEqo69ns47eUJ1RYTfTYBchlZwmKduZsE0hsbI248" alt="Developer Avatar" class="rounded-circle img-fluid">
             </div>
           </div>
           <div class="col-md-8">
