--- a/src/app/app.html
+++ b/src/app/app.html
@@ -25,7 +25,7 @@
           <i class="fas fa-trophy me-1"></i>Ranking
         </a>
         <a routerLink="/about" routerLinkActive="active" (click)="toggleMenu()">
-          <i class="fas fa-info-circle me-1"></i>Nosotros
+          <i class="fas fa-info-circle me-1"></i>About
         </a>
         <a routerLink="/admin-login" routerLinkActive="active" (click)="toggleMenu()">
           <i class="fas fa-lock me-1"></i>
