--- a/src/app/components/announcement/announcement.component.html
+++ b/src/app/components/announcement/announcement.component.html
@@ -1,12 +1,18 @@
 <div class="announcement-container card">
-  <div class="card-header d-flex justify-content-between align-items-center">
+  <div class="card-header d-flex justify-content-between align-items-center" (click)="toggleAnnouncement()">
     <div>
       <i class="fas fa-info-circle me-2"></i>Información Importante
     </div>
+    <div class="btn-close" *ngIf="!isHidden">
+      <i class="fas fa-chevron-up"></i>
+    </div>
+    <div class="btn-close" *ngIf="isHidden">
+      <i class="fas fa-chevron-down"></i>
+    </div>
   </div>
-  <div class="card-body">
+  <div class="card-body" *ngIf="!isHidden">
     <div class="announcement-content">
-        UptcMusic.com 2025 - V4.0
+      UptcMusic.com 2025 - V4.0
       <div class="alert alert-info">
         <h4><i class="fas fa-exclamation-triangle me-2"></i>A nuestros queridos usuarios:</h4>
         <p>-Una cancion es eliminada automaticamente al completar <strong>10 Dislikes </strong></p>
