--- a/src/app/components/voting-list/voting-list.scss
+++ b/src/app/components/voting-list/voting-list.scss
@@ -461,6 +461,10 @@ h2 {
     padding: 0.3rem 0.6rem;
     border-radius: 4px;
     font-size: 0.8rem;
+    
+    i {
+        margin-right: 0.4rem;
+    }
   }
 }
 
