--- a/src/app/components/buitres-detail/buitres-detail.component.scss
+++ b/src/app/components/buitres-detail/buitres-detail.component.scss
@@ -6,14 +6,14 @@
   color: white;
 }
 .profile-img {
-  width: 100%;
-  aspect-ratio: 1;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   background: #222;
   border: 4px solid #333;
 }
 .gender-avatar {
-  font-size: 5rem;
+  font-size: 4rem;
 }
 .gender-avatar.male { color: #519df5; }
 .gender-avatar.female { color: #f551a3; }
