--- a/src/app/components/buitres/buitres.component.html
+++ b/src/app/components/buitres/buitres.component.html
@@ -8,7 +8,18 @@
         <div class="search-box">
             <i class="fas fa-search search-icon"></i>
             <input type="text" [(ngModel)]="searchQuery" (ngModelChange)="onSearchChange($event)"
-                placeholder="Escribe el nombre de la persona..." class="search-input">
+                placeholder="Escribe el nombre de la persona..." class="search-input" autocomplete="off">
+            
+            <!-- Suggestions Dropdown -->
+            <div class="search-suggestions" *ngIf="suggestions.length > 0">
+                <div *ngFor="let suggestion of suggestions" class="suggestion-item" (click)="selectSuggestion(suggestion)">
+                    <div class="suggestion-avatar">
+                        <i *ngIf="suggestion.gender === 'male'" class="fas fa-user-tie male"></i>
+                        <i *ngIf="suggestion.gender === 'female'" class="fas fa-user-graduate female"></i>
+                    </div>
+                    <span class="suggestion-name">{{ suggestion.name }}</span>
+                </div>
+            </div>
         </div>
     </div>
 
